src/components/NavBar.scss
.nav-bar {
    background: linear-gradient(
        90deg,
        rgb(28, 27, 27) 0%,
        rgb(26, 23, 23) 100%
    );
    height: 80px;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 1.2rem;
    position: sticky;
    top: 0;
    z-index: 999;
}

.navbar-container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    height: 80px;
    width: 75%;

    @media screen and (min-width: 961px) and (max-width: 1271px) {
        width: 80%;
    }

    @media screen and (max-width: 960px) {
        width: 90%;
    }
}

.navbar-logo {
    font-weight: 600;
    color: #fff;
    cursor: pointer;
    font-size: 2rem;
    text-decoration: none;
    padding-top: 6px;
}

.fa-typo3 {
    margin-left: 0.5rem;
    font-size: 1.8rem;
}

.nav-menu {
    display: grid;
    grid-template-columns: repeat(4, auto);
    gap: 10px;
    list-style: none;
    text-align: center;
    width: 60vw;
    justify-content: end;
    margin-top: auto;

    @media screen and (max-width: 960px) {
        display: flex;
        flex-direction: column;
        width: 100%;
        height: 90vh;
        position: absolute;
        top: 80px;
        left: -100%;
        opacity: 1;
        transition: all 0.5s ease;
        grid-gap: 0;
        gap: 0;
        justify-content: start;
    }

    &.active {
        @media screen and (max-width: 960px) {
            background: #242222;
            left: 0;
            opacity: 1;
            transition: all 0.5s ease;
            z-index: 1;
            padding-left: 0;
        }
    }
}

.nav-item {
    font-family: "Poppins", sans-serif;
    font-weight: 600;
    height: 80px;
}

.nav-item.active {
    border-bottom: 4px solid #fff;

    @media screen and (max-width: 960px) {
        border-bottom: 0px;
    }
}

.nav-links {
    color: #fff;
    display: flex;
    align-items: center;
    text-decoration: none;
    padding: 0.5rem 1rem;
    height: 100%;

    @media screen and (max-width: 960px) {
        text-align: center;
        padding: 2rem;
        width: 100%;
        display: table;
    }

    &:hover {
        border-bottom: 4px solid #fff;
        transition: all 0.2s ease-out;

        @media screen and (max-width: 960px) {
            background-color: #fff;
            color: #242424;
            border-radius: 0;
        }
    }
}

.fa-bars {
    color: #fff;
}

.nav-links-mobile {
    display: none;

    @media screen and (max-width: 960px) {
        display: block;
        text-align: center;
        margin: 2rem auto;
        border-radius: 4px;
        width: 80%;
        text-decoration: none;
        font-size: 1.5rem;
        background-color: transparent;
        color: #fff;
        padding: 14px 20px;
        border: 1px solid #fff;
        transition: all 0.3s ease-out;
    }

    &:hover {
        @media screen and (max-width: 960px) {
            background: #fff;
            color: #242424;
            transition: 250ms;
        }
    }
}

.menu-icon {
    display: none;

    @media screen and (max-width: 960px) {
        display: block;
        position: relative;
        font-size: 1.8rem;
        cursor: pointer;
    }
}

.NavbarItems {
    @media screen and (max-width: 960px) {
        position: relative;
    }
}

